--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
     "@react-three/xr": "^5.7.1",
+    "@supabase/supabase-js": "^2.57.2",
     "@types/three": "0.152.1",
     "leva": "^0.9.35",
     "react": "^18.2.0",
