--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ai-tutor-fullstack",
+  "name": "ai-digital-tutor",
   "version": "1.0.0",
-  "description": "AI-powered Python tutor with React frontend and Node.js backend",
+  "description": "AI-powered digital tutor with React frontend and Node.js backend - teaches any subject to 7th-8th grade students",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
@@ -12,6 +12,7 @@
     "start:frontend": "cd frontend && npm run preview",
     "build": "npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
+    "vercel-build": "cd frontend && npm install && npm run build",
     "install:all": "npm install && npm run install:backend && npm run install:frontend",
     "install:backend": "cd backend && npm install",
     "install:frontend": "cd frontend && npm install"
@@ -21,12 +22,15 @@
   },
   "keywords": [
     "ai",
-    "tutor",
+    "digital tutor",
+    "education",
+    "learning",
+    "students",
+    "grades 7-8",
     "react",
     "nodejs",
     "fullstack",
-    "elevenlabs",
-    "python"
+    "elevenlabs"
   ],
-  "author": "Python Tutor Team"
+  "author": "Digital Tutor Team"
 }
