--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "leva": "^0.9.35",
     "node-fetch": "^3.3.2",
     "openai": "^5.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "remark-gfm": "^4.0.1",
     "three": "0.153.0"
   },
   "devDependencies": {
