feat: Unify project structure and enhance PDF export
 Project Structure:
- Remove confusing backend/ and frontend/ duplicate folders
- Consolidate all source code under unified src/ structure
- Move server files to server/ directory
- Organize documentation in docs/ directory
- Update package.json scripts for new structure

 PDF Export Improvements:
- Focus PDF export on personal notes only (remove chat history)
- Add professional markdown-to-PDF formatting
- Convert ## headers to proper bold large fonts (16pt-18pt)
- Transform bullet points from '- item' to ' item'
- Remove raw markdown syntax from PDF output
- Add proper typography hierarchy and spacing
- Improve filename format: 'study-notes-{topic}.pdf'

 Enhanced Features:
- Better visual design with separators and colors
- Cleaner date formatting
- Professional footer branding
- Smart text processing for markdown elements
- Responsive layout with proper margins

 Documentation:
- Add comprehensive README.md with project structure
- Move all documentation to docs/ folder
- Update development workflow documentation

--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "ai-digital-tutor",
   "version": "1.0.0",
   "description": "AI-powered digital tutor for grades 7-8 with multilingual support, voice synthesis, and 3D avatar",
-  "main": "server.js",
+  "main": "server/server.js",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "nodemon server.js --ext js",
+    "dev:server": "nodemon server/server.js --ext js",
     "dev:client": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server/server.js"
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.12.2",
