--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       }
     },
     {
-      "src": "server.js",
+      "src": "server/server.js",
       "use": "@vercel/node",
       "config": {
         "maxDuration": 30
@@ -20,7 +20,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server.js"
+      "dest": "/server/server.js"
     },
     {
       "src": "/(.*)",
