Fix CORS issues with D-ID API in production
- Add proxy API endpoint to handle D-ID API calls server-side
- Route production requests through /api/did-proxy to bypass CORS
- Keep direct API calls for localhost development
- Enhanced error handling and logging for debugging
- Support all HTTP methods (GET, POST, PUT, DELETE) through proxy

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
   ],
   "routes": [
     {
+      "src": "/api/did-proxy",
+      "dest": "/api/did-proxy.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/server/server.js"
     },
