--- a/package.json
+++ b/package.json
@@ -33,16 +33,18 @@
     "remark-gfm": "^4.0.1",
     "three": "0.153.0",
     "vite": "^4.1.0",
-    "@vitejs/plugin-react": "^3.1.0"
+  "@vitejs/plugin-react": "^3.1.0",
+  "tailwindcss": "^3.3.3",
+  "postcss": "^8.4.31",
+  "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+  "postcss": "^8.4.31",
+  "tailwindcss": "^3.3.3"
   },
   "keywords": [
     "ai",
